added on-the-run-updating scaler

--- a/make_scaler.ipynb
+++ b/make_scaler.ipynb
@@ -2,13 +2,132 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "890da996-7726-4bdf-9bdf-8d26335be681",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "960e32dc-2d39-4540-91f0-39017360d3bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>means</th>\n",
+       "      <th>vars</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.112293</td>\n",
+       "      <td>0.156421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.046099</td>\n",
+       "      <td>0.072343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.021277</td>\n",
+       "      <td>0.020824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.030733</td>\n",
+       "      <td>0.029788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.050827</td>\n",
+       "      <td>0.055336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>388</th>\n",
+       "      <td>0.035461</td>\n",
+       "      <td>0.034204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>389</th>\n",
+       "      <td>0.036643</td>\n",
+       "      <td>0.035300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>390</th>\n",
+       "      <td>0.040189</td>\n",
+       "      <td>0.038574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>391</th>\n",
+       "      <td>0.020095</td>\n",
+       "      <td>0.019691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>392</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>393 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        means      vars\n",
+       "0    0.112293  0.156421\n",
+       "1    0.046099  0.072343\n",
+       "2    0.021277  0.020824\n",
+       "3    0.030733  0.029788\n",
+       "4    0.050827  0.055336\n",
+       "..        ...       ...\n",
+       "388  0.035461  0.034204\n",
+       "389  0.036643  0.035300\n",
+       "390  0.040189  0.038574\n",
+       "391  0.020095  0.019691\n",
+       "392  0.000000  0.000000\n",
+       "\n",
+       "[393 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('./scaler_record/scale_record_20220707-222152.csv')\n",
+    "df"
    ]
   },
   {
