implemented basic logger

--- a/make_scaler.ipynb
+++ b/make_scaler.ipynb
@@ -132,6 +132,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "79091dc8-54c0-49d0-9120-3aa0b19391c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>valNNLoss</th>\n",
+       "      <th>policyNNLoss</th>\n",
+       "      <th>matching_rates</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.292039</td>\n",
+       "      <td>-0.088131</td>\n",
+       "      <td>29.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.446178</td>\n",
+       "      <td>-0.135748</td>\n",
+       "      <td>37.037037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.460782</td>\n",
+       "      <td>-0.094499</td>\n",
+       "      <td>27.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.149364</td>\n",
+       "      <td>-0.039028</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.103608</td>\n",
+       "      <td>-0.091572</td>\n",
+       "      <td>20.833333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  valNNLoss  policyNNLoss  matching_rates\n",
+       "0           0   0.292039     -0.088131       29.166667\n",
+       "1           1   0.446178     -0.135748       37.037037\n",
+       "2           2   0.460782     -0.094499       27.500000\n",
+       "3           3   0.149364     -0.039028       20.000000\n",
+       "4           4   0.103608     -0.091572       20.833333"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('./metrics_log/metrics_20220708-001921.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "id": "00d9ff56-cd59-41d9-81e2-0bc09c793e10",
    "metadata": {},
